--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Deploy static site to S3 bucket
         run: aws s3 sync ./dist/ s3://american-pegasus.com
 
-      - name: Invalidate Cloudfront Distribution
-        uses: chetan/invalidate-cloudfront-action@master
-        env:
-          PATHS: "/*"
-          DISTRIBUTION: ELYUBARGP0CYQ
+      # - name: Invalidate Cloudfront Distribution
+      #   uses: chetan/invalidate-cloudfront-action@master
+      #   env:
+      #     PATHS: "/*"
+      #     DISTRIBUTION: ELYUBARGP0CYQ
