--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "vite-tsconfig-paths": "^3.3.14",
+    "web3": "1.2.6",
     "xstate": "^4.25.0"
   },
   "devDependencies": {
