--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["es5", "es6", "dom"],
+    "module": "esnext",
+    "target": "es6",
     "allowJs": false,
     "skipLibCheck": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -17,5 +17,6 @@
     "jsx": "react",
     "baseUrl": "."
   },
-  "include": ["./src"]
+  "include": ["./src"],
+  "exclude": ["node_modules", "build", "cache", "artifacts"]
 }
