[FIX] TSC build issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "react",
     "baseUrl": "."
   },
-  "include": ["./src"],
+  "include": ["./src", "./types"],
   "exclude": ["node_modules", "build", "cache", "artifacts"]
 }
